# Cowsay

./: pyproject.toml
cowsay/: settings.py  urls.py
cowsay_app/: admin.py  forms.py  models.py  urls.py  views.py
cowsay_app/migrations/: 0001_initial.py
cowsay_app/templates/: history.html  index.html
